--- a/suppFigure5.Rmd
+++ b/suppFigure5.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Supplementary Figure 5. Examples of the absence of a fly TF in a dimeric cluster"
+title: "Supplementary Figure 5. Examples of the Aabsence of Fly TFs in Dimeric Clusters"
 output: 
   pdf_document:
     fig_caption: yes
@@ -21,27 +21,19 @@ opts_chunk$set(comment=NA, warning=FALSE, message=FALSE, fig.width=8, fig.pos="!
 library(motifStack)
 ```
 ```{r dataInput, echo=FALSE}
-getMatAlignOut <- function(pcmpath, outpath="output", 
-                          groupDistance=NA, trim=0.2){
+source("zzz.R") ## set outpath, matalign_path, neighbor_pah and MatAlign2tree_path
+getMatAlignOut <- function(pcmpath, groupDistance=2.5, trim=0.2){
     pcms <- readPCM(pcmpath)
     pfms<-lapply(pcms,pcm2pfm)
-    matalign_path <- "./app/matalign-v4a"
-    neighbor_path <- "./app/neighbor.app/Contents/MacOS/neighbor"
-    system(paste("perl MatAlign2tree.pl --in . --pcmpath", pcmpath, 
-                 "--out", outpath,
-                 "--matalign", matalign_path, 
-                 "--neighbor", neighbor_path, 
-                 "--tree","UPGMA"))
-    newickstrUPGMA <- 
-        readLines(con=file.path(outpath, "NJ.matalign.distMX.nwk"))
+    system(paste("perl", MatAlign2tree_path, "--in . --pcmpath", pcmpath, "--out", outpath,
+             "--matalign", matalign_path, "--neighbor", neighbor_path, "--tree","UPGMA"))
+    newickstrUPGMA <- readLines(con=file.path(outpath, "NJ.matalign.distMX.nwk"))
     phylog <- newick2phylog(newickstrUPGMA, FALSE)
     leaves <- names(phylog$leaves)
     motifs <- pfms[leaves]
     if(!is.na(groupDistance)){
-        motifSig <- 
-            motifSignature(motifs, phylog, 
-                           groupDistance=groupDistance, 
-                           min.freq=1, trim=trim)
+        motifSig <- motifSignature(motifs, phylog, groupDistance=groupDistance,
+                                   min.freq=1, trim=trim)
         sig <- signatures(motifSig)
         gpCol <- sigColor(motifSig)
     }else{
@@ -51,8 +43,7 @@ getMatAlignOut <- function(pcmpath, outpath="output",
     }
     
     return(list(phylog=phylog, sig=sig, gpCol=gpCol, 
-                motifs=DNAmotifAlignment(motifs), 
-                leaves=leaves, 
+                motifs=DNAmotifAlignment(motifs), leaves=leaves, 
                 unaligned.pfms=motifs))
 }
 
@@ -69,7 +60,7 @@ colorSet <- c("Dm"="#00FC00",
 ## kexpand is function to extend knitr.
 kexpand<-function(.ele, id, cap, figheight, des){
     text <- paste("{{des}}\n\n```{r {{cap}},fig.cap='{{cap}}',fig.height={{figheight}},echo=",
-                  ifelse(id==1,"TRUE","FALSE"),
+                  ifelse(id==100,"TRUE","FALSE"),
                   "}\n\n
 leaveNames <- gsub('^(Dm|Mm|Ms|Hs)_', '', .ele$leaves)\n\n
 species <- colorSet[gsub(\"^(Dm|Mm|Ms|Hs).*$\", \"\\\\1\", .ele$leaves)]\n\n
@@ -85,7 +76,7 @@ motifPiles(phylog=.ele$phylog, .ele$motifs,
 }
 ```
 
-```{r plots, results='asis'}
+```{r plots, results='asis', echo=FALSE}
 sta <- mapply(function(.ele, name, ID, des){
     TF.name <- gsub("DimerCluster", "", name)
     kexpand(.ele, id=ID, cap=paste0("Supplementary Figure 5.", TF.name),
