--- a/suppFigure7.Rmd
+++ b/suppFigure7.Rmd
@@ -21,7 +21,10 @@ opts_chunk$set(comment=NA, warning=FALSE, message=FALSE, fig.width=8, fig.pos="!
 library(motifStack)
 ```
 ```{r dataInput, echo=FALSE}
-source("zzz.R") ## set outpath, matalign_path, neighbor_pah and MatAlign2tree_path
+outpath <- "output"
+matalign_path <- "./app/matalign-v4a"
+neighbor_path <- "./app/neighbor.app/Contents/MacOS/neighbor"
+MatAlign2tree_path <- "./MatAlign2tree.pl"
 getMatAlignOut <- function(pcmpath, groupDistance=2.5, trim=0.2){
     pcms <- readPCM(pcmpath)
     pfms<-lapply(pcms,pcm2pfm)
@@ -50,7 +53,7 @@ getMatAlignOut <- function(pcmpath, groupDistance=2.5, trim=0.2){
 pcmpath <- dir("pcmsUni", include.dirs=TRUE)[13]
 matAlignOut <- lapply(file.path("pcmsUni", pcmpath), 
                       getMatAlignOut, groupDistance=4)
-description <- c("## Species-specific motifs")
+description <- ""
 colorSet <- c("Dm"="#00FC00", 
               "Mm"="brown", "Ms"="#F69156", 
               "Hs"="#D900D9")
@@ -77,7 +80,7 @@ motifPiles(phylog=.ele$phylog, .ele$motifs,
 
 ```{r plots, results='asis', echo=FALSE}
 sta <- mapply(function(.ele, name, ID, des){
-    kexpand(.ele, id=ID, cap="__Supplementary Figure 7a__: Species-specific motifs", figheight=ceiling(.25*length(.ele$leaves)), des)
+    kexpand(.ele, id=ID, cap="__Supplementary Figure 7a__: Species-specific motifs for fly or human/mouse. Species-specific motifs in the HD family are shown in purple (Human/SELEX data), brown (Mouse/PBM data) and green (Fly/B1H data)", figheight=ceiling(.25*length(.ele$leaves)), des)
 }, matAlignOut, pcmpath, 1:length(pcmpath), description)
 
 ```
@@ -116,7 +119,7 @@ readDataDoAna <- function(pcmpath, groupDistance=2.5, trim=0.2){
 
 ```
 
-```{r Fly_DNA, fig.width=6, fig.height=6, dpi=150, fig.cap="__Supplementary Figure 7b__: Species-specific motifs in the HD family plotted together with common motif clusters", echo=FALSE}
+```{r Fly_DNA, fig.width=6, fig.height=6, dpi=150, fig.cap="__Supplementary Figure 7b__: Species-specific motifs in the HD family plotted together with common motif clusters. Clusters shared between Drosophila and mammals are shown in gray. Species-specific motifs in the HD family are shown in purple (Human/SELEX data), brown (Mouse/PBM data) and green (Fly/B1H data).", echo=FALSE}
 gpDis <- 2
 Fly_DNA <- readDataDoAna("pcmsDatasetFly", groupDistance=gpDis)
 unUnique <- Fly_DNA$sig
