--- a/suppFigure2.Rmd
+++ b/suppFigure2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Supplementary Figure 2"
+title: "Supplementary Figure 2. Example Code Snippets for Visualizing Motif Alignments with motifStack "
 output:
   pdf_document:
     fig_caption: yes
@@ -19,61 +19,66 @@ fn = local({
 })
 ```
 
-**Input Data**
 
 ```{r inputdata, message=FALSE, warning=FALSE, error=FALSE}
 ##load the library
 library(motifStack)
 
-##read pcms
+##read pcms (position count matrices)
 pcmpath <- "pcmsDatasetDM"
 pcms <- readPCM(pcmpath)
-##convert to pfms
+##convert to pfms (position frequency matrices)
 pfms<-lapply(pcms,pcm2pfm)
 ```
 
-## Supplementary Figure 2A-D. Examples of linear and radial dendrograms and commands to generate them
+## Supplementary Figure 2A-D. Examples of linear and radial dendrograms and code to generate them.
 
-### Plot motifs as a stack
-```{r stackLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("plotted as a stack of motifs", "A")}
+### Plot motifs as a stack.
+```{r stackLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a stack of motifs", "A")}
 subset_pfms <- pfms[10:15]
 motifStack(subset_pfms, layout="stack")
 ```
 
-###Plot motifs as a linear tree 
+\FloatBarrier
 
-```{r phylogLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("plotted as a linear tree", "B")}
+###Plot motifs as a linear tree with nucleotides drawn proportional to their frequency.
+
+```{r phylogLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a linear tree with nucleotides drawn proportional to their frequency", "B")}
 ##try different style of sequence logo
 motifStack(pfms[sample(1:length(pfms), 20)], layout="phylog", clabel.leaves=.8,
            f.logo=0.6, ic.scale=FALSE)
 ```
 
+\FloatBarrier
 
-###Plot motifs as a linear tree with information content (IC)
+###Plot motifs as a linear tree depicting information content (IC).
 
-```{r treeLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("plotted as a linear tree with IC", "C")}
+```{r treeLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a linear tree with IC", "C")}
 ##By default, MotIV is used for clustering
 motifStack(subset_pfms, layout="tree", trueDist=TRUE)
 ```
 
+\FloatBarrier
 
-### Plot  motifs as a radial phylogenetic tree
+### Plot motifs as a radial tree.
 
-```{r radialPhylogLayout, fig.width=10, fig.height=10, dpi=72, fig.cap=fn("plotted as a radial phylogenetic tree", "D")}
+```{r radialPhylogLayout, fig.width=10, fig.height=10, dpi=72, fig.cap=fn("Plotted as a radial tree", "D")}
 motifStack(pfms, layout="radialPhylog")
 ```
 
-## Supplementary Figure 2E-G. Merge motifs using the *motifSignature* function with different distance cutoffs, and plot merged motifs in various layouts
+\FloatBarrier
 
-Before motifs being merged, the distances of the motifs need to be calculated using STAMP, MovIV or MatAlign. Here we show different ways to draw the merged motifs and how different distance cutoffs affect the merging results. The red dotted line indicates the distance cutoff used.
+## Supplementary Figure 2E-G. Merge motifs with different distance cutoffs and display these motif signatures in various layouts.
 
-### Merge motifs using different distance cutoffs
+Before motifs are merged, the distances of the motifs are calculated using STAMP, MovIV or MatAlign. Here we show different ways to display the merged motifs and how different distance cutoffs affect the resulting motif sigatures. The red dotted line indicates the distance cutoff used.
 
-```{r merging, fig.width=4, fig.height=4, fig.cap=fn("merging by different distance", "E")}
-source("zzz.R") ## set outpath, matalign_path, neighbor_pah and MatAlign2tree_path
-# outpath <- "output"
-# matalign_path <- "./app/matalign-v4a"
-# neighbor_path <- "./app/neighbor.app/Contents/MacOS/neighbor"
+### Merge motifs using different distance cutoffs.
+
+```{r merging, fig.width=4, fig.height=4, fig.cap=fn("Merge motifs by different distance", "E")}
+outpath <- "output"
+matalign_path <- "./app/matalign-v4a"
+neighbor_path <- "./app/neighbor.app/Contents/MacOS/neighbor"
+MatAlign2tree_path <- "./MatAlign2tree.pl"
 pcmpath <- "pcmsDatasetDM"
 pcms <- readPCM(pcmpath)
 pfms<-lapply(pcms,pcm2pfm)
@@ -84,7 +89,7 @@ system(paste("perl", MatAlign2tree_path, "--in . --pcmpath", pcmpath,
              "--tree","UPGMA"))
 newickstrUPGMA <- readLines(con=file.path(outpath, "NJ.matalign.distMX.nwk"))
 phylogUPGMAmatAlign <- newick2phylog(newickstrUPGMA, FALSE)
-##get the leaves of phylog to reorder the pfms
+##get the leaves of tree for ordering the pfms
 matAlignLeaveNames <- names(phylogUPGMAmatAlign$leaves)
 this_motifs <- pfms[matAlignLeaveNames]
 matAlignLeaveNames <- gsub("^Dm_", "", matAlignLeaveNames)
@@ -95,7 +100,7 @@ for(groupDistance in c(0, 1, 2, 3)){
                                groupDistance=groupDistance, 
                                min.freq=1)
     this_sig <- signatures(motifSig)
-    ## get color set for signature groups
+    ## get color set for the signature groups
     this_gpCol <- sigColor(motifSig)
     plotMotifStackWithRadialPhylog(phylog=phylogUPGMAmatAlign, 
                                    pfms=this_sig,
@@ -110,9 +115,15 @@ for(groupDistance in c(0, 1, 2, 3)){
 }
 ```
 
+```{r fig.cap=fn("Merge motifs by different distance", "E"), fig.width=0.1, fig.height=0.02, echo=FALSE}
+par(mar=rep(0, 4))
+plot.new()
+```
 
-### Plot merged motif as a radial phylogenetic tree
-```{r motifCloud, warning=FALSE, fig.width=3.5, fig.height=3.5, dpi=72, fig.cap=fn('motifCloud', "F")}
+\FloatBarrier
+
+### Plot motif signature as a radial tree.
+```{r motifCloud, warning=FALSE, fig.width=3.5, fig.height=3.5, dpi=72, fig.cap=fn("Motif signature plotted as a radial tree", "F")}
 ## get signature
 gpDist <- c(.5, 1)
 motifSig <- lapply(gpDist, motifSignature, 
@@ -128,8 +139,15 @@ for(i in 1:2){
 }
 ```
 
-###Plot merged motif as a word cloud
-```{r motifCloudRect, warning=FALSE, fig.width=3.5, fig.height=3.5, fig.cap=fn('motifCloud', "G")}
+```{r fig.cap=fn("Motif signature plotted as a radial tree", "F"), fig.width=0.1, fig.height=0.02, echo=FALSE}
+par(mar=rep(0, 4))
+plot.new()
+```
+
+\FloatBarrier
+
+###Plot motif signature as a word cloud.
+```{r motifCloudRect, warning=FALSE, fig.width=3.5, fig.height=3.5, fig.cap=fn("Motif signature plotted as a word cloud with motif size representing the number of motifs contributed to the signature. The larger the size, the larger the number of motifs that share the motif signature", "G")}
 ## motif cloud, rectangle style
 for(i in 1:2){
     motifCloud(motifSig[[i]], layout="rectangles", ic.scale=FALSE)
@@ -139,9 +157,16 @@ for(i in 1:2){
 }
 ```
 
-## Supplementary Figure 2H-M. Use various color options to visualize different sources of variations in the motif set
+```{r fig.cap=fn("Motif signature plotted as a word cloud with motif size representing the number of motifs contributed to the signature. The larger the size, the larger the number of motifs that share the motif signature", "G"), fig.width=0.1, fig.height=0.02, echo=FALSE}
+par(mar=rep(0, 4))
+plot.new()
+```
 
-There are four ways to color a radial phylogenetic tree, i.e., the background of the inner circle, the motif names, the inner label ring and the outer label ring. Here are a few examples on how to use these options to show the data source of the motif, the computational algorithm for generating the motifs, information content (IC) and the motif group. 
+\FloatBarrier
+
+## Supplementary Figure 2H-M. Use various color options to highlight different motif features.
+
+motifStack offers five options to color a radial tree: the background of the inner circle, the text of motif names, the background of the motif names, the inner label ring and the outer label ring. Here are a few examples using these options to show the motif's data source, the computational algorithm that generated the motifs, the motif's information content (IC) and the TF. 
 
 ```{r functions}
 getPairColor <- function(n=10L){
@@ -201,8 +226,8 @@ pcms <- readPCM(pcmpath)
 pfms<-lapply(pcms,pcm2pfm)
 ```
 
-###Use the color of the background of inner circle to distinguish different data sources with the parameter col.bg
-```{r colorsets1, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("color setting, tree background", "H")}
+###Use the color of the background of inner circle to distinguish different data sources with the parameter col.bg.
+```{r colorsets1, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the background of inner circle to distinguish different data sources with the parameter col.bg", "H")}
 motIVout <- getMotIVOut(pfms, "PCC", "SWU")
 attach(motIVout)
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
@@ -213,11 +238,14 @@ plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
 legend(-2.3, 2.4, legend=c("Uniprobe", "CIS-BP"), 
        fill= highlightCol(c("yellow", "blue"), alpha=.3), 
        border="white", lty=NULL, bty = "n", cex=1)
-text(0, 2.4, "Use the color of the background of inner circle to distinguish different data sources with the parameter col.bg", cex=1.5)
+
 ```
 
-###Use the color of motif names to distinguish the computational algorithms used with the parameter col.leaves
-```{r colorsets2, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("color setting, leaves", "I")}
+
+\FloatBarrier
+
+###Use the color of text of motif names to distinguish the computational algorithms used with the parameter col.leaves.
+```{r colorsets2, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the text of motif names to separate the computational algorithms used with the parameter col.leaves", "I")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
                             labels.leaves=leaveNames, 
                             col.leaves=algorithm,
@@ -226,11 +254,12 @@ plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
 legend(-2.3, 2.4, legend=c("DREAM5", "Seed-And-Wobble", "BEEML"), 
        fill= c("blue", "brown", "orange"), 
        border="white", lty=NULL, bty = "n", cex=1)
-text(0, 2.4, "Use the color of motif names to separate the computational algorithms used with the parameter col.leaves", cex=1.5)
 ```
 
-###Use the color of the background of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg
-```{r colorsets3, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("color setting, leave background", "J")}
+\FloatBarrier
+
+###Use the color of the background of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg.
+```{r colorsets3, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the background of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg", "J")}
 icgp <- ifelse(sapply(sapply(unaligned.pfms, getIC), mean) > 0.6, 
                "lightgray", "black")
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
@@ -243,13 +272,13 @@ legend(-2.3, 2.4,
        legend=c("Information Content <= 0.6", "Information Content > 0.6"), 
        fill= highlightCol(c("black", "lightgray"), alpha=.3), 
        border="white", lty=NULL, bty = "n", cex=1)
-text(0, 2.4, 
-     "Use the color of the background of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg", 
-     cex=1.5)
+
 ```
 
-###Use the color of the inner ring of the motif circle to distinguish motif groups with the parameter col.inner.label.circle
-```{r colorsets4, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("color setting, inner circle", "K")}
+\FloatBarrier
+
+###Use the color of the inner ring of the motif circle to distinguish the TF with the parameter col.inner.label.circle.
+```{r colorsets4, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the inner ring of the motif circle to distinguish the TFs with the parameter col.inner.label.circle", "K")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
                             labels.leaves=leaveNames, 
                             col.inner.label.circle=motifGroup,
@@ -262,13 +291,12 @@ legend(1.5, 2.4, legend=levels.motifGroup[1:12],
 legend(1.5, -2, legend=levels.motifGroup[13:21], 
        fill= colors.motifGroup[13:21], 
        border="black", lty=NULL, bty = "n", ncol=2, cex=.8)
-text(0, 2.4, 
-     "Use the color of the inner ring of the motif circle to distinguish motif groups with the parameter col.inner.label.circle", 
-     cex=1.5)
 ```
 
-###Use the color of the outer ring of the motif circle to distinguish motif groups with the parameter col.outer.label.circle
-```{r colorsets5, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("color setting, outer circle", "L")}
+\FloatBarrier
+
+###Use the color of the outer ring of the motif circle to distinguish the TFs with the parameter col.outer.label.circle.
+```{r colorsets5, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the outer ring of the motif circle to distinguish the TFs with parameter col.outer.label.circle", "L")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
                             labels.leaves=leaveNames, 
                             col.outer.label.circle=motifGroup,
@@ -281,13 +309,13 @@ legend(1.5, 2.4, legend=levels.motifGroup[1:12],
 legend(1.5, -2, legend=levels.motifGroup[13:21], 
        fill= colors.motifGroup[13:21], 
        border="black", lty=NULL, bty = "n", ncol=2, cex=.8)
-text(0, 2.4, 
-     "Use the color of the outer ring of the motif circle to distinguish motif groups with parameter col.outer.label.circle", 
-     cex=1.5)
+
 ```
 
-###Use a combination of coloring options to visualize different source of variations
-```{r colorsets6, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("color setting, use a combination of coloring options", "M")}
+\FloatBarrier
+
+###Use a combination of coloring options to visualize multiple motif features.
+```{r colorsets6, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use a combination of coloring options to visualize multiple motif feature", "M")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=aligned.pfms,
                                labels.leaves=leaveNames, 
                                col.bg=algorithm, col.bg.alpha=.3,
@@ -296,8 +324,8 @@ plotMotifStackWithRadialPhylog(phylog=phylog, pfms=aligned.pfms,
                                cleaves=.2, circle=1.1, circle.motif=1.6, 
                                clabel.leaves=.8, angle=358)
 legend(-2.3, 2.4, 
-       legend=c("algorithm", "CIS-BP/DREAM5", "Uniprobe/Seed-And-Wobble", 
-                "Uniprobe/BEEML", "Information Content", "<= 0.6", "> 0.6"), 
+       legend=c("algorithm", "Mm/PBM/DREAM5", "Mm/PBM/Seed-And-Wobble", 
+                "Mm/PBM/BEEML", "Information Content", "<= 0.6", "> 0.6"), 
        fill= c("white", 
                highlightCol(c("blue", "brown", "orange"), alpha=.3), 
                "white", highlightCol(c("black", "lightgray"), alpha=.3)), 
@@ -306,18 +334,19 @@ legend(-2.3, 2.4,
 detach(motIVout)
 ```
 
+\FloatBarrier
 
-## Supplementary Figure 2N-O. Compare different Column Comparison Metrics (CCM) and aligment methods
+## Supplementary Figure 2N-O. Compare different Column Comparison Metrics (CCM) and aligment methods.
 
-Here we illustrate how to set the CCM and alignment method using MotIV or MatAlign, and that different choices of methods might affect the subsequent analysis and intepretation in motifStack.
+Here we used a subset of mouse HD TFs with PBM data. For each TF, we generated three different motifs using three different computational methods. We compared how well different CCM and alignment methods could group together the motifs from the same TFs. This example illustrates how to set the CCM and the alignment method, using MotIV or MatAlign, and that different methods can substantially affect the resulting alignment as visulaized in motifStack.
 
 When clustering using MovIV, Pearson Correlation Coefficient (PCC) or
-Average Log Likelihood Ratio (ALLR) is used as the CCM, and Smith-Waterman Ungapped (SWU) or Needleman-Wunsch (NW) is used as the alignment method. When clustering the motifs using MatAlign, ALLR and SWU are used.
+Average Log Likelihood Ratio (ALLR) was used as the CCM, and Smith-Waterman Ungapped (SWU) or Needleman-Wunsch (NW) was used as the alignment method. When clustering the motifs using MatAlign, ALLR and SWU were used as CCM and alignment respectively.
 
 To run the MatAlign examples, phylip (http://evolution.genetics.washington.edu/phylip/progs.data.dist.html) and MatAlign (http://stormo.wustl.edu/MatAlign/) need to be installed first.
 
-###Visualize motif alignments using MotIV with different CCM and alignment methods
-```{r MotIV, fig.width=4, fig.height=4, fig.cap=fn("MotIV with different CCM and alignment methods", "N")}
+###Visualize motif alignments generated by MotIV with different CCM and alignment methods.
+```{r MotIV, fig.width=4, fig.height=4, fig.cap=fn("Alignment of mouse PBM data by MotIV with different CCM and alignment methods", "N")}
 
 sta <- mapply(function(cc, align){
     motIVout <- getMotIVOut(pfms, cc, align)
@@ -331,8 +360,8 @@ sta <- mapply(function(cc, align){
                                clabel.leaves=.3, angle=358)
 
     legend(-2.3, 2.4, 
-           legend=c("CIS-BP/DREAM5", "Uniprobe/Seed-And-Wobble", 
-                    "Uniprobe/BEEML"), 
+           legend=c("Mm/PBM/DREAM5", "Mm/PBM/Seed-And-Wobble", 
+                    "Mm/PBM/BEEML"), 
            fill= highlightCol(c("blue", "brown", "orange"), alpha=.3), 
            border="white", lty=NULL, bty = "n", cex=.5)
     text(0, 2.3, label=paste("cc=", cc, "; align=", align), cex=1.5)
@@ -349,13 +378,23 @@ sta <- mapply(function(cc, align){
 }, c("PCC", "PCC", "ALLR", "ALLR"), c("NW", "SWU", "NW", "SWU"))
 ```
 
-The number (1:xx; 2:yy; 3:zz) on the bottom of the figure 2O and 2P represents the number of motifs identified by different number of motif comparison and clustering algorithms. 1:xx means that xx number of motifs are identified by one algorithm; 2:yy means that yy number of motifs are identified by two different algorithms; 3:zz means that zz number of motifs are identified by three different algorithms.
+```{r fig.cap=fn("Alignment of mouse PBM data by MotIV with different CCM and alignment methods", "N"), fig.width=0.1, fig.height=0.02, echo=FALSE}
+par(mar=rep(0, 4))
+plot.new()
+```
 
-###Visualize motif alignments using MatAlign with ALLR as the MCC and SWU as the alignment method
-```{r MatAlign, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("UPGMA tree by matAlign+PHYLIP", "O")}
+\FloatBarrier
+
+The number (1:X; 2:Y; 3:Z) on the bottom of the figure 2O and 2P represents the number of motifs from the same TF grouped by different algorithms. 3:Z means that Z number of TFs with 3 of 3 motifs clustered together; 2:Y means that Y number of TFs with 2 of 3 motifs clustered together; 1:X means that X number of TFs failed to cluster any of the 3 motifs together. Thus, the lower the X, the higher the Y and Z, the better the method performed. In this example, MatAlign performed better than MotIV even using the same CCM (ALLR) and alignment method (SWU). 
+
+###Visualize motif alignments generated by MatAlign with ALLR as the MCC and SWU as the alignment method.
+```{r MatAlign, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Alignment of mouse PBM data by MatAlign", "O")}
 ##read newick tree. Alignment is done by MatAlign
-##and the newick tree is generated by Neighbor, which is a part of phylip
-source("zzz.R")
+##The newick tree is generated by Neighbor, which is a part of phylip
+outpath <- "output"
+matalign_path <- "./app/matalign-v4a"
+neighbor_path <- "./app/neighbor.app/Contents/MacOS/neighbor"
+MatAlign2tree_path <- "./MatAlign2tree.pl"
 system(paste("perl", MatAlign2tree_path, "--in . --pcmpath", pcmpath, 
              "--out", outpath,
              "--matalign", matalign_path, 
@@ -403,7 +442,7 @@ legend(1.5, -2, legend=levels.motifGroup[13:21],
        fill= colors.motifGroup[13:21], 
        border="black", lty=NULL, bty = "n", ncol=2, cex=.8)
 legend(-2.35, 2.4, 
-       legend=c("CIS-BP/DREAM5", "Uniprobe/Seed-And-Wobble", "Uniprobe/BEEML"),
+       legend=c("Mm/PBM/DREAM5", "Mm/PBM/Seed-And-Wobble", "Mm/PBM/BEEML"),
        fill= highlightCol(c("blue", "brown", "orange"), alpha=.3), 
        border="white", lty=NULL, bty = "n", cex=.8)
 cnt <- rle(motifGroup)
@@ -416,8 +455,9 @@ cnt.1["1"] <- (cnt.1["1"]+cnt.1["2"]*2+cnt.1["3"]*3)/3 - cnt.1["2"] - cnt.1["3"]
 text(0, -2.3, label=paste(names(cnt.1), cnt.1, sep=":", collapse="; "), cex=1.5)
 ```
 
+\FloatBarrier
 
-## Supplementary Figure 2P. Different distance resolution between MotIV and MatAlign even when using the same Column Comparison Matrix and alignment method
+## Supplementary Figure 2P. Improved alignment of fly HD family motifs using MatAlign compared to MotIV. The MatAlign alignment method is superior for discriminating between the closely related motifs in the fly HD family.
 
 ```{r revolution.1, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("MotIV(ALLR and SWU) as the alignment method", "P.a")}
 pcmpath <- "pcmsDatasetDM"
